# uv-flask

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/core/: database.py
app/modules/trainer/: entity.py  interface.py  repository.py  router.py  schema.py  service.py
migrations/: env.py
