[project]
name = "uv-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "flask>=3.1.2",
    "flask-openapi3[redoc,scalar,swagger]>=4.3.1",
    "gunicorn>=25.1.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.47",
]
